# amptree

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/01-bootstrap/: down.sql  up.sql
src-tauri/src/: audio.rs  commands.rs  main.rs
src-tauri/src/audio/: decoder.rs  mod.rs  player.rs  stream.rs  track.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/event/: mod.rs
src-tauri/src/player/: mod.rs
src-tauri/src/track/: mod.rs
src/lib/backend/: commands.ts  playerService.ts
src/lib/components/: PlayerBar.svelte  ProgressBar.svelte
src/lib/components/player/: PlayerBar.svelte  ProgressBar.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  PlayAudio.svelte  styles.css
src/routes/album/: +page.svelte
